Project

General

Profile

Actions

Bug #49313

closed

RGW ops log is not logging bucket listing operations

Added by Bob Emerson over 3 years ago. Updated 20 days ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Description of problem:

While implementing RGW ops logging and noticed that during a "ls" or "list-buckets" operation this operation is not logged to the ops log.

Enable RGW ops log:

Enable the following options in rgw section of ceph.conf and restart the RGW daemons:

Raw

rgw_enable_ops_log = True
rgw_log_http_headers = http_x_forwarded_for, http_expect, http_content_md5
rgw_ops_log_socket_path = /var/run/ceph/opslog
The following command can be used to check the header details:

Listen to socket with this command:

  1. nc -U --recv-only /var/run/ceph/opslog

Test

S3CMD - No logging

[root@mynode ~]# ~/tools/s3cmd/s3cmd-2.0.2/s3cmd -c ~/.s3cfg.aaa ls
2021-02-11 23:07 s3://new-bucket-e098aa4a
2021-02-11 23:48 s3://new-bucket-f1b18510

RGW LOG:

2021-02-15 18:41:54.895 7f5e87c31700 1 ====== starting new request req=0x7f5fc1ac2670 =====
2021-02-15 18:41:54.896 7f5e87c31700 1 ====== req done req=0x7f5fc1ac2670 op status=0 http_status=200 latency=0.001s ======
2021-02-15 18:41:54.896 7f5e87c31700 1 beast: 0x7f5fc1ac2670: 10.0.0.83 - - [2021-02-15 18:41:54.0.896677s] "GET / HTTP/1.1" 200 241 - - -

NC:

[root@node5 ~]# nc -U --recv-only /var/run/ceph/opslog


AWS CLI - no logging

[root@node5 ~]# ceph -v
ceph version 14.2.11-95.el7cp (1d6087ae858e7c8e72fe7390c3522c7e0d951240) nautilus (stable)

[root@emmitt ~]# aws s3 ls --endpoint-url=http://10.0.0.163:8080
2021-02-11 18:07:26 new-bucket-e098aa4a
2021-02-11 18:48:23 new-bucket-f1b18510

[root@emmitt ~]# aws s3api list-buckets --query "Buckets[].Name" --endpoint-url=http://10.0.0.163:8080
[
"new-bucket-e098aa4a",
"new-bucket-f1b18510"
]

RGW LOG:

2021-02-15 18:42:36.837 7f5ea2466700 1 ====== starting new request req=0x7f5fc1ac2670 =====
2021-02-15 18:42:36.839 7f5ea2466700 1 ====== req done req=0x7f5fc1ac2670 op status=0 http_status=200 latency=0.00200001s ======
2021-02-15 18:42:36.839 7f5ea2466700 1 beast: 0x7f5fc1ac2670: 10.0.0.197 - - [2021-02-15 18:42:36.0.839883s] "GET / HTTP/1.1" 200 241 - "aws-cli/2.1.25 Python/3.7.3 Linux/4.18.0-240.8.1.el8_3.x86_64 exe/x86_64.rhel.8 prompt/off command/s3.ls" -

NC:

[root@node5 ~]# nc -U --recv-only /var/run/ceph/opslog


In the both examples above the list op was not logged.

Actions #1

Updated by Matt Benjamin over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Matt Benjamin
Actions #2

Updated by Matt Benjamin about 3 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Matt Benjamin about 3 years ago

  • Pull request ID set to 39933
Actions #4

Updated by Ken Dreyer about 3 years ago

  • Backport set to pacific
Actions #5

Updated by Sage Weil about 3 years ago

  • Project changed from Ceph to rgw
Actions #6

Updated by Konstantin Shalygin 20 days ago

  • Status changed from Fix Under Review to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF