rgw: permit logging of list-bucket (and any other no-bucket op)

This limitation is from inception (2011), but just recently reported by
a site using ops-log for system audit.

Fixes: https://tracker.ceph.com/issues/49313
Resolves: rhbz#1954789

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry-picked from commit 88b08945ed3537010dcc7c917faca7d23ade9df1)